Fix icon alignment on mobile

--- a/styles/StatisticsCard.module.css
+++ b/styles/StatisticsCard.module.css
@@ -19,3 +19,9 @@
 .statisticsCard h3 {
   margin-bottom: 20px;
 }
+
+@media screen and (max-width: 950px) {
+  .iconContainer {
+    transform: translateX(-50%) translateY(-50%);
+  }
+}
